# hermes-voice

./: .ci-mypy-report.txt  .ci-quality-report.txt  .ci-study-report.txt  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.example.toml  pyproject.toml
.claude/: launch.json
.github/workflows/: apply-study-ruff-fixes.yml  container.yml  curriculum-engine.yml  fix-responder-lines.yml  platform-clean-install.yml  real-model-smoke.yml  ruff-autofix-artifact.yml  ruff-responder-diagnostic.yml  run-phase1-build.yml  study-autoformat.yml  study-diagnostics.yml  study-mypy-report.yml  study-quality-fix.yml
deploy/compose/: .env.example  configure-agent.sh
deploy/compose/templates/: hermes1-voice-config.toml  hermes2-voice-config.toml
deploy/hermes-agent/: hermes-speech-bridge.py
deploy/lxc/: deploy-study.sh
deploy/tailscale/: hermes1-serve.json  hermes2-serve.json
docs/: portable-container-stack.md  speaker-filtering-and-voice-mute.md  tailscale-auto-serve.md  tts-complete-playback.md
docs/platform/: README-MACOS-APPLE-SILICON.md  README-MACOS-INTEL.md  README-UBUNTU-LINUX.md  README-WINDOWS.md  README.md  REAL-MACHINE-TESTING.md  VALIDATION-STATUS.md
docs/study/: CURRICULUM-ENGINE-V2.md
hermes_voice/io/: remote_speech.py  speech_factory.py  stt_faster_whisper.py  stt_faster_whisper_worker.py  stt_parakeet.py  telegram_telethon.py  tts_kokoro.py  tts_kokoro_portable.py  vad_silero.py
hermes_voice/kit/: normalize.py  ports.py  protocol.py  replies.py  sentences.py  session.py  speaker_gate.py  turns.py  voice_mute.py
hermes_voice/scripts/: configure_tailscale_serve.py  login.py
hermes_voice/server/: app.py  config.py  immediate_barge.py  orchestrator.py  study_app.py
hermes_voice/study/: __init__.py  api.py  curriculum.py  curriculum_api.py  curriculum_responder.py  curriculum_runtime.py  curriculum_store.py  install.py  mcat_media.py  pack_api.py  phase1_content.bundle  phase1_content.py  responder.py  starter_packs.py  store.py
hermes_voice/web/: connection_guard.mjs  curriculum.css  curriculum.mjs  index.html  main.js  study-live.mjs  study.css  study.html  study.mjs  voice_settings.js
hermes_voice/web/worklets/: mic.js  player.js
launchd/: com.stephen.hermes-voice.plist
scripts/: enroll_speaker.py  generate_probe_audio.py  run_real_machine_test.py  verify_platform.py  verify_readmes.py
scripts/linux/: install-systemd-user.sh
scripts/macos/: install-launch-agent.sh
scripts/windows/: install-hermes-voice-task.ps1  start-hermes-voice.ps1
tests/: test_stt_faster_whisper_process.py
tests/e2e/: verify.py
tests/integration/: test_speech_models.py  test_telegram_session.py
tests/io/: test_portable_speech.py  test_remote_speech.py  test_speech_factory.py  test_telegram_relay.py
tests/kit/: test_normalize.py  test_protocol.py  test_replies.py  test_sentences.py  test_session.py  test_speaker_gate.py  test_turns.py  test_voice_mute.py
tests/scripts/: test_configure_tailscale_serve.py  test_container_assets.py  test_platform_verification.py
tests/server/: test_config.py  test_healthz.py  test_lifecycle.py  test_orchestrator_loop.py  test_session_concurrency.py  test_telegram_mode.py  test_token_auth.py  test_wait_timeout.py  test_ws_transport.py
tests/study/: test_ai_auto_advance.py  test_app.py  test_curriculum.py  test_curriculum_api.py  test_curriculum_responder.py  test_curriculum_runtime.py  test_curriculum_store.py  test_immediate_barge.py  test_phase1_content.py  test_responder.py  test_starter_packs.py  test_store.py
tests/web/: test_connection_guard.py  test_sticky_voice_controls.py  test_topic_ui.py  verify_connection_guard.mjs  verify_main_connection_lifecycle.mjs
