[project]
name = "hermes-voice"
version = "0.1.0"
description = "Realtime voice gateway for Hermes agents on Telegram"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "telethon>=1.40",
    "numpy>=2.0",
]

[project.optional-dependencies]
speech = [
    "parakeet-mlx>=0.3",
    "mlx-audio>=0.2",
    "silero-vad>=5.1",
    "onnxruntime>=1.20",
    "numba>=0.60",
    "misaki[en]>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "ruff>=0.9",
    "websockets>=14.0",
    "httpx>=0.28",
    "httpx2>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "models: requires local MLX speech models",
    "telegram: requires an authorized Telethon session",
]
addopts = "-m 'not models and not telegram'"

[tool.mypy]
strict = true
files = ["hermes_voice/kit", "hermes_voice/server"]

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
