[project]
name = "hermes-voice"
version = "0.2.0"
description = "Realtime voice gateway for Hermes agents on Telegram"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "telethon>=1.40",
    "httpx>=0.28",
    "qrcode>=8.2",
    "numpy==1.26.4; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=2.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
speaker-filter = [
    "resemblyzer>=0.1.4",
    "resampy>=0.4",
    "sounddevice>=0.5",
    "soundfile>=0.13",
]

speech-macos = [
    "parakeet-mlx>=0.3; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "mlx-audio>=0.2; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "silero-vad>=5.1; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "onnxruntime>=1.20; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "numba>=0.60; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "misaki[en]>=0.7; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
]

speech-portable = [
    "faster-whisper>=1.2",
    "ctranslate2==4.3.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "kokoro>=0.9",
    "soundfile>=0.13",
    "silero-vad>=5.1",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchaudio==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers==4.57.6; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "onnxruntime==1.23.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "onnxruntime>=1.20; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numba==0.60.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "llvmlite==0.43.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numba>=0.60; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "misaki[en]>=0.7",
]

speech = [
    "parakeet-mlx>=0.3; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "mlx-audio>=0.2; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "silero-vad>=5.1; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "onnxruntime>=1.20; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "numba>=0.60; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "misaki[en]>=0.7; sys_platform == 'darwin' and (platform_machine == 'arm64' or platform_machine == 'aarch64')",
    "faster-whisper>=1.2; sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64')",
    "ctranslate2==4.3.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "kokoro>=0.9; sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64')",
    "soundfile>=0.13; sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64')",
    "silero-vad>=5.1; sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64')",
    "onnxruntime>=1.20; sys_platform == 'linux'",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchaudio==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers==4.57.6; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "onnxruntime==1.23.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numba>=0.60; sys_platform == 'linux'",
    "numba==0.60.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "llvmlite==0.43.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "misaki[en]>=0.7; sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine != 'arm64' and platform_machine != 'aarch64')",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "ruff>=0.9",
    "websockets>=14.0",
    "httpx>=0.28",
    "httpx2>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "models: requires local MLX speech models",
    "telegram: requires an authorized Telethon session",
]
addopts = "-m 'not models and not telegram'"

[tool.mypy]
strict = true
files = ["hermes_voice/kit", "hermes_voice/server"]

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hermes_voice.study.phase1_content"
disable_error_code = ["assignment"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"hermes_voice/study/phase1_content.py" = ["E501", "F541", "F811", "F841", "B007"]

# Hermes Voice optional platform speech imports
[[tool.mypy.overrides]]
module = [
    "hermes_voice.io.stt_parakeet",
    "hermes_voice.io.stt_faster_whisper",
    "hermes_voice.io.tts_kokoro",
    "hermes_voice.io.tts_kokoro_portable",
    "hermes_voice.io.vad_silero",
]
disable_error_code = ["import-not-found", "import-untyped"]

[[tool.mypy.overrides]]
module = "hermes_voice.kit.speaker_gate"
disable_error_code = ["import-not-found", "import-untyped"]
